# RNBO-FMOD-Wrapper

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
CMake/: CMakeLists.txt  LeakFixer.cmake  leak_fixer.py
RNBOExportDir/: description.json  presets.json  rnbo_source.cpp
RNBOExportDir/rnbo/src/: RNBO_CoreObject.h
RNBOWrapper/: RNBOWrapper.cpp  RNBOWrapper.cpp.in  RNBOWrapper.hpp  RNBO_FMOD.cpp  RNBO_FMOD.cpp.in
RNBO_FMOD.xcodeproj/: project.pbxproj
RNBO_FMOD.xcodeproj/project.xcworkspace/xcuserdata/JonasFuellemann.xcuserdatad/: UserInterfaceState.xcuserstate
RNBO_FMOD.xcodeproj/xcshareddata/xcschemes/: RNBO_FMOD.xcscheme
RNBO_FMOD.xcodeproj/xcuserdata/JonasFuellemann.xcuserdatad/xcschemes/: xcschememanagement.plist
SrcExportDir/: CmakeLists.txt  description.json  presets.json  rnbo_source.cpp
